This script has been moved to a the repository at https://github.com/unsupported/canvas

--- a/API_Examples/bulk_course_export/ruby/Gemfile
+++ b/API_Examples/bulk_course_export/ruby/Gemfile
@@ -1,3 +1,4 @@
-source 'http://rubygems.org'
+All content in this repository is being migrated to
+https://github.com/unsupported/canvas. If you can't find what you are looking for
+here, you may find it there.
 
-gem 'unirest'
