--- a/API_Examples/change_sis_ids/ruby/Gemfile
+++ b/API_Examples/change_sis_ids/ruby/Gemfile
@@ -1,3 +1,2 @@
-source 'http://rubygems.org'
+This script has been moved to a the repository at https://github.com/unsupported/canvas
 
-gem 'unirest'
